--- a/AtikoPages/aboutme.html
+++ b/AtikoPages/aboutme.html
@@ -31,14 +31,22 @@
 </header>
  <div class="aboutMe">
 
+  <div class="asideIzq">
     <h1 class="aboutStory"> .OUR STORY </h1>
     <p class="aboutparrafo"> Our journey began in barcelona. 
       Making Music Videos for our favorite band and artist. 
       A little White later se move to Buenos Aires
     </p>
+  </div>
 
-    <img src="../images/desk.jpg"> </img>
+    <div class="asideDer">
+      <picture class="bancoimg" > <img src="../images/desk.jpg"> </img> </picture> 
+        <picture class="bancoimg" > <img src="../images/averie-woodard-5d20kdvFCfA-unsplash.jpg"> </img> </picture> 
+          <picture class="bancoimg" ><img src="../images/Travel Op 590x300.jpg"> </img> </picture> 
+            <picture class="bancoimg" > <img src="../images/BLogoOp2 590x300.jpg"> </img> </picture> 
+    </section>
 
+ </div>
  </div>
  
  </body>
