--- a/AtikoPages/aboutme.html
+++ b/AtikoPages/aboutme.html
@@ -29,6 +29,7 @@
 </div>
 
 </header>
+<main>
  <div class="aboutMe">
 
   <div class="asideIzq">
@@ -49,7 +50,7 @@
  </div>
  </div>
  
- </body>
+</main>
  <footer class="footerElementos">
 
   <ul class="redesicons"> 
@@ -79,8 +80,8 @@
    </br>
    </p>
  </div>
- 
- 
- 
+  
  </footer>
+</body>
+
  </html>
