--- a/AtikoPages/contact.html
+++ b/AtikoPages/contact.html
@@ -29,7 +29,7 @@
 </div>
 
 </header>
-
+<main>
 <h1 class="contactTitulo"> . WANT TO TALK? </h1>
 
     <form class="ContactForm">
@@ -66,10 +66,8 @@
 </div>
 </form>
 
-
-
  </div>
-</body>
+</main>
 <footer class="footerElementos">
 
   <ul class="redesicons"> 
@@ -100,7 +98,6 @@
    </p>
  </div>
  
- 
- 
  </footer>
+</body>
 </html>
