--- a/AtikoPages/gallery.html
+++ b/AtikoPages/gallery.html
@@ -30,6 +30,7 @@
 
 </header>
  
+<main>
  <div >
     <ul class="gallery">
 <li> 
@@ -75,9 +76,8 @@
     
     
  </div>
- 
+</main>
 
-</body>
 <footer class="footerElementos">
 
   <ul class="redesicons"> 
@@ -108,7 +108,6 @@
    </p>
  </div>
  
- 
- 
  </footer>
+</body>
 </html>
