--- a/AtikoPages/services.html
+++ b/AtikoPages/services.html
@@ -29,6 +29,8 @@
 </div>
 
 </header>
+
+<main>
 <div class="ServicesBody">
  <h2 class="textoServices"> A multi-media production and content company. We have created content,
    commercials, and music videos for a wide range of clients globally.</h2>
@@ -37,7 +39,7 @@
  
 </div>
 
-</body>
+</main>
 <footer class="footerElementos">
 
   <ul class="redesicons"> 
@@ -68,7 +70,7 @@
    </p>
  </div>
  
- 
- 
  </footer>
+</body>
+
  </html>
