--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 </header>
  
+<main>
 <div class="fotoPrincipal">
 <img class="imagenAuto"  src="./images/averie-woodard-5d20kdvFCfA-unsplash.jpg">
 
@@ -42,6 +43,8 @@
 
 <br>
     <title> ATIKO</title>
+
+  </main>
     
 </body>
 
