--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body id="bodycompleto">
 
+  <section id="backgroundMobileOnly"></section>
+
+
   <header class="elementosCabecera">
  <!-- barra navegacion--> 
 
@@ -79,6 +82,7 @@
 
 
 </footer>
+</section>
 </body>
 
 </html>
