--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <img class="imagenAuto"  src="./images/averie-woodard-5d20kdvFCfA-unsplash.jpg">
 
 <div class="tituloImagenPrincipal">
-<h1> MOTION GRAPHER  </h1>
+<h1> .MOTIONGRAPHER  </h1>
 <h1 class="design"> DESIGNER </h1>
 
 </div>
