services page mobile

--- a/AtikoPages/services.html
+++ b/AtikoPages/services.html
@@ -30,14 +30,14 @@
 
 </header>
 
-<main>
-<div class="ServicesBody">
+<main class="ServicesBody">
+
  <h2 class="textoServices"> A multi-media production and content company. We have created content,
    commercials, and music videos for a wide range of clients globally.</h2>
 
  <iframe title="vimeo-player" src="https://player.vimeo.com/video/110540528?h=e1e201df3a" width="960" height="660" frameborder="0" allowfullscreen></iframe>
  
-</div>
+
 
 </main>
 <footer class="footerElementos">
