--- a/AtikoPages/contact.html
+++ b/AtikoPages/contact.html
@@ -29,7 +29,7 @@
 </div>
 
 </header>
-<main>
+<main class="contactMain">
 <h1 class="contactTitulo"> . WANT TO TALK? </h1>
 
     <form class="ContactForm">
