Final para entregar

--- a/AtikoPages/services.html
+++ b/AtikoPages/services.html
@@ -30,7 +30,7 @@
 
 </header>
 
-<main class="ServicesBody">
+<main class="servicesBody">
 
  <h2 class="textoServices"> A multi-media production and content company. We have created content,
    commercials, and music videos for a wide range of clients globally.</h2>
